[package]
name = "servim"
version = "0.1.0"
license = "GPL-3.0"
edition = "2018"
authors = ["Noah Hellman <noah.hellman@protonmail.com>"]

[dependencies.libservo]
git = "https://github.com/servo/servo.git"
rev = "84185eb"
features = ["layout-2020", "media-gstreamer"]

[patch."https://github.com/jrmuizel/raqote"]
raqote = { git = "https://github.com/jdm/raqote", branch = "fkup" }

# https://github.com/servo/servo/issues/27515#issuecomment-671474054
[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
